Fixed issue for scrollbar.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -123,7 +123,6 @@ span {
   width: calc(100% - 80px);
   height: 100%;
   right: 0;
-  overflow: scroll;
 }
 * {
   height: 100%;
